# AzureKinect3DReconstruction

./: .gitignore  BetterVisualizer2CamWorksCOLOR.py  BetterVisualizer2CamWorksROTATErealtime.py  BetterVisualizer2CamWorksROTATEsave2 copy.py  BetterVisualizer2CamWorksROTATEsave2.py  BetterVisualizer2CamWorksTOGGLE copy.py  BetterVisualizer2CamWorksTOGGLE.py  ChooseReconstruction.py  MeshReconstructionVisualizer.py  README.md  Rotate3Dpointcloud.py  Works2CamerasCOLORVisualizer.py  environment.yml  pyproject.toml
CodeThatKindaWorks/: BetterVisualizerD2PC.py  BetterVisualizerD2PC_Mesh SavesConstantly.py  BetterVisualizerD2PC_MeshWorks1Scene.py  BetterVisualizerD2cameras.py  BetterVisualizerD2camerasWORKSkinda.py  LastReconstructionVisualizer.py  PointCloudToMesh.py  capture_frames.py  test_device.py
CodeThatWorks/: 1camera-detectsSceneChanges.py  BetterVisualizer2CamWorksCOLOR.py  BetterVisualizer2CamWorksNOCOLOR.py  BetterVisualizer2CamWorksTOGGLE copy.py  BetterVisualizer2CamWorksTOGGLE.py  BetterVisualizerD2camerasWorks1Cam copy.py  RGBD_Odometry.py
CodeThatWorks/bundlefusionattemps/: bundlefusion_reconstruction.py  bundlefusion_reconstructionWorks.py
azure-kinect-DK/Reconstruction/: 3Dreconstruction.py  Initial1Reconstruction-CUDA  InitialReconstruction-CUDA  InitialReconstruction-CUDA-2cam copy  LastReconstructionVisualizer.py  Reconstruction-CUDA  Reconstruction-CUDA-debugging  Reconstruction-ResourceEfficient.py  Reconstruction.py  SelectReconstructionVisualizer.py  Visualizer-base.py  Visualizer.py  VoxelDownsampling.py  generate_checkerboard.py
