[project]
name = "kinect-reconstruction"
version = "0.1.0"
description = "Kinect-based 3D reconstruction project"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=75.1.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
numpy = "1.24.4"
opencv-python = "4.11.0.86"
open3d = "0.19.0"
pyk4a = "1.5.0"
scikit-image = "0.21.0"
scipy = "1.10.1"
matplotlib = "3.7.5"
plotly = "6.0.1"
dash = "3.0.2"
flask = "3.0.3"
pillow = "10.4.0"
networkx = "3.1"
cupy-cuda11x = "12.3.0" 